# game_of_life_GL

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Glitter/Headers/: app.h  camera.h  glitter.hpp  grid.h  patterns.h  renderer.h  shader.h  util.h
Glitter/Shaders/: cell.frag  cell.vert  test.frag
Glitter/Sources/: app.cpp  camera.cpp  grid.cpp  main.cpp  patterns.cpp  renderer.cpp  shader.cpp  util.cpp
